fix deloy feature share

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,7 +30,7 @@
       async
       defer
       crossorigin="anonymous"
-      src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v22.0"
+      src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v22.0&appId=1355571308921954"
     ></script>
     <div id="root"></div>
   </body>
